--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -19,7 +19,7 @@
         "p1":"אנו שואפים לספק לך את המתנות הטובות ביותר לכל אירוע.",
         "h2QuickLinks":"קישורים מהירים",
         "linkHome":"דף בית",
-        "linkProducts":"Products",
+        "linkProducts":"מוצרים",
         "linkCart":"סל קניות",
         "contact":"צור קשר",
         "linkContact":"התחברות",
