--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -1,32 +1,33 @@
-
 {
-    "homePage":{
-        "title":"דף הבית"
+    "homePage": {
+        "title": "דף הבית"
     },
     "loginPage": {
-      "title": "התחברות",
-      "username": "שם משתמש",
-      "password": "סיסמה",
-      "loginButton": "התחבר"
+        "title": "התחברות",
+        "username": "שם משתמש",
+        "password": "סיסמה",
+        "loginButton": "התחבר"
     },
-    "contactPage":{
-        "title":"דף התחברות",
-        "h5contact" :"יצירת קשר"
+    "contactPage": {
+        "title": "דף התחברות",
+        "h5contact": "יצירת קשר"
     },
-    "footerpage":{
-        "title":" תחתית עמוד",
-        "h2About" :"קצת עלינו",
-        "p1":"אנו שואפים לספק לך את המתנות הטובות ביותר לכל אירוע.",
-        "h2QuickLinks":"קישורים מהירים",
-        "linkHome":"דף בית",
-        "linkProducts":"מוצרים",
-        "linkCart":"סל קניות",
-        "contact":"צור קשר",
-        "linkContact":"התחברות",
-        "lableEmail":"Your email address",
-        "lableMessage":"Your message",
-        "buttonSend":"Send",
-        "p2":"2024 Gift Shop. All rights reserved."
+    "footerpage": {
+        "title": " תחתית עמוד",
+        "h2About": "קצת עלינו",
+        "p1": "אנו שואפים לספק לך את המתנות הטובות ביותר לכל אירוע.",
+        "h2QuickLinks": "קישורים מהירים",
+        "linkHome": "דף בית",
+        "linkProducts": "מוצרים",
+        "linkCart": "סל קניות",
+        "contact": "צור קשר",
+        "linkContact": "התחברות",
+        "lableEmail": "כתובת מייל שלך ",
+        "lableMessage": "ההודעה שלך",
+        "buttonSend": "שלח"
+    },
+    "navPage": {
+        "linkHome": "דף בית",
+        "linkContact": "התחברות"
     }
-  }
-  
+}
