added popUp pagae

--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -1,4 +1,7 @@
 {
+    "popUpPage":{
+        "modalTitle":"Your order was successfully plased"
+    },
     "homePage":{
         "title":"Home page"
     },
