--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -41,6 +41,8 @@
     "navPage": {
         "linkHome": "Home",
         "linkContact": "contact"
+    },
+    "productList":{
+        "title": "product List"
     }
-    
 }
