--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -42,5 +42,8 @@
     "navPage": {
         "linkHome": "דף בית",
         "linkContact": "התחברות"
+    },
+    "productList":{
+        "title": "  רשימת מוצרים"
     }
 }
