Add reducer to the projrct

--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -31,6 +31,8 @@
     },
     "navPage": {
         "linkHome": "Home",
-        "linkContact": "contact"
+        "linkContact": "Contact",
+        "linCommonQuestions":"FQA"
+
     }
 }
