--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -31,6 +31,7 @@
     },
     "navPage": {
         "linkHome": "דף בית",
-        "linkContact": "התחברות"
+        "linkContact": "התחברות",
+        "linCommonQuestions":"שאלות נפוצות"
     }
 }
