שמתי כמה דברים בהערות כדי שהפרויקט ירוץ

--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -42,7 +42,7 @@
     "navPage": {
         "linkHome": "Home",
         "linkContact": "Contact",
-        "linCommonQuestions":"FQA"
+        "linCommonQuestions":"FQA",
         "linkLogin":"login",
         "linkProduct":"product list"
     },
