--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -42,7 +42,7 @@
     },
     "navPage": {
         "linkHome": "דף בית",
-        "linCommonQuestions":"שאלות נפוצות"
+        "linCommonQuestions":"שאלות נפוצות",
         "linkContact": "איש קשר",
         "linkLogin":"התחברות",
         "linkProduct":"רשימת מוצרים"
