Edit on FQA page & edit on Axios

--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -50,5 +50,9 @@
     "productListPage":{
         "title": "  רשימת מוצרים"
 
+    },
+    "CommonQuestionsPage": {
+        "title": "שאלות נפוצות"
     }
+    
 }
