--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -50,5 +50,8 @@
     "productListPage":{
         "title": "product List"
 
+    },
+    "CommonQuestionsPage": {
+        "title": "FQA"
     }
 }
