Shopping Cart component

--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -16,6 +16,20 @@
         "title": "Contact page",
         "h5contact": "contact"
     },
+    "shoppingCartPage": {
+        "title": "Shopping Cart",
+        "p1": "your basket is empty",
+        "thItem": "Item",
+        "thQuantity": "Quantity",
+        "thPrice" : "Price",
+        "thTotal": "Total",
+        "thActions": "Actions",
+        "removeButton": "Remove",
+        "h3Total": "Total",
+        "clearButton": "Clear Cart",
+        "addButton": "Add Item",
+        "checkoutButton": "Checkout"
+    },
     "footerPage": {
         "title": "Footer page",
         "h2About": "About Us",
@@ -44,7 +58,8 @@
         "linkContact": "Contact",
         "linCommonQuestions":"FQA",
         "linkLogin":"login",
-        "linkProduct":"product list"
+        "linkProduct":"product list",
+        "linkShoppingCart": " Shopping Cart"
     },
   
     "productListPage":{
