--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -10,7 +10,11 @@
         "title": "התחברות",
         "username": "שם משתמש",
         "password": "סיסמה",
-        "loginButton": "התחבר"
+        "loginButton": "התחבר",
+        "invalidEmail": "פורמט דואר אלקטרוני לא חוקי",
+        "invalidPassword" :"הסיסמה צריכה להיות באורך של לפחות 8 תווים"
+
+
     },
     "contactPage": {
         "title": "דף התחברות",
