Connect to server with language ....

--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -77,6 +77,8 @@
         "title": "FAQ",
         "languageId":2,
         "FAQlist" : "FAQlistEn",
-        "language":"EN"
+        "language":"EN",
+        "question":"questionEn",
+        "answer":"answerEn"
     }
 }
