Login Form  - connect to server B"H!!!

--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -9,6 +9,7 @@
     "loginPage": {
         "title": "Login",
         "username": "Username",
+        "email": "Email",
         "password": "Password",
         "loginButton": "Login",
         "invalidEmail": "Invalid email format",
