--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -9,6 +9,7 @@
     "loginPage": {
         "title": "התחברות",
         "username": "שם משתמש",
+        "email": "אימייל",
         "password": "סיסמה",
         "loginButton": "התחבר",
         "invalidEmail": "פורמט דואר אלקטרוני לא חוקי",
