--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -68,13 +68,13 @@
     },
   
     "productListPage":{
-        "title": "product List"
+        "title": "product List",
+        "moreDetails": "more details",
+        "cart":"add to cart"
 
     },
     "recommendedProducts":{
         "title": "recommended Products"
-
-
     },
     "CommonQuestionsPage": {
         "title": "FAQ",
@@ -83,5 +83,8 @@
         "language":"EN",
         "question":"questionEn",
         "answer":"answerEn"
+    },
+    "productPage":{
+        "review":"review products"
     }
 }
