--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -74,7 +74,10 @@
     "productListPage":{
         "title": "  רשימת מוצרים",
         "moreDetails": "פרטים נוספים",
-        "cart":"הוספה לסל"
+        "cart":"הוספה לסל",
+        "technicalIssue":"מצטערים, תקלה טכנית, נסו לרענן את הדף או להכנס שוב מחדש",
+        "noProducts": "אין מוצרים!"
+
 
 
     },
