--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -3,7 +3,9 @@
         "modalTitle": "הזמנתך בוצעה בהצלחה!"
     },
     "homePage": {
-        "title": "דף הבית"
+        "title": "דף הבית",
+        "up":"למעלה",
+        "information":",כאן יהיה כתוב, מידע קצר על האתר, מי מתפעלת אותו ועוד כל מיני דברים מענינים"
     },
     "loginPage": {
         "title": "התחבר",
