--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -5,7 +5,7 @@
     "homePage": {
         "title": "דף הבית",
         "up":"למעלה",
-        "information":",כאן יהיה כתוב, מידע קצר על האתר, מי מתפעלת אותו ועוד כל מיני דברים מענינים"
+        "information":"!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!ביחד ננצחחחחחחחחחחחחחחחחחחחחחחחחחחחחחחחחחחחחחחח"
     },
     "loginPage": {
         "title": "התחבר",
