Add token & save in cookies

--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -28,6 +28,7 @@
         "invalidEmail": "Invalid email format",
         "invalidphoneNumber": "Invalid phone number",
         "invalidPassword": "Password should be at least 8 characters long",
+        "errorMailExists":"This email account already exists in the system, please enter a new email address",
         "massage": "You have successfully registered!\n Thanks"
     },
     "resetPasswordPage": {
