--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -28,6 +28,7 @@
         "invalidEmail": "פורמט דואר אלקטרוני לא חוקי",
         "invalidphoneNumber": "מספר טלפון לא חוקי",
         "invalidPassword": "הסיסמה צריכה להיות באורך של לפחות 8 תווים",
+        "errorMailExists":"חשבון מייל זה כבר קיים במערכת אנא הזן כתובת מייל חדשה",
         "massage": "נרשמת בהצלחה!\n תודה"
 
     },
