--- a/src/components/i18n/en.json
+++ b/src/components/i18n/en.json
@@ -95,7 +95,9 @@
         "linkLogin": "Sign in",
         "linkProduct": "product list",
         "linkOrderForm": " Order Form",
-        "linkShoppingCart": " Shopping Cart"
+        "linkShoppingCart": " Shopping Cart",
+        "linkStayTuned": "Stay Tuned",
+        "linkDistributionRecord": "Distribution Record"
     },
   
     "productListPage":{
