--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -4,8 +4,8 @@
     },
     "homePage": {
         "title": "דף הבית",
-        "up":"למעלה",
-        "information":"ברוכים הבאים!!!!!<br>באתר שלנו תוכלו לבחור עיצוב מיחוד שיקפיץ לכם את כל האורע,<br>אנחנו נעצב לכם את המיתוג לארוע הכי מושלם שיכול להיות,<br>אחרי הכל העיצוב הוא חלק חשוב ביותר, ואי אפשר לותר עליו,<br>רוצים לקצור מחמאות על הארוע שלכם?<br>הכנסו לאתר תכתבו לנו לאיזה סגנון עיצוב התחברתם, ונדאג לספק לכם את השירות הכי מושלם,<br>חוויה מועילה ומהנה!!!"        
+        "up": "למעלה",
+        "information": "ברוכים הבאים!!!!!<br>באתר שלנו תוכלו לבחור עיצוב מיחוד שיקפיץ לכם את כל האורע,<br>אנחנו נעצב לכם את המיתוג לארוע הכי מושלם שיכול להיות,<br>אחרי הכל העיצוב הוא חלק חשוב ביותר, ואי אפשר לותר עליו,<br>רוצים לקצור מחמאות על הארוע שלכם?<br>הכנסו לאתר תכתבו לנו לאיזה סגנון עיצוב התחברתם, ונדאג לספק לכם את השירות הכי מושלם,<br>חוויה מועילה ומהנה!!!"
     },
     "loginPage": {
         "title": "התחבר",
@@ -16,8 +16,8 @@
         "invalidPassword": "הסיסמה צריכה להיות באורך של לפחות 8 תווים",
         "noAccount": "אין לך חשבון? ",
         "createAccount": "צור חשבון",
-        "forgot":"שכחת סיסמה?",
-        "errorLoging":"אחד הנתונים הוקש שגוי"
+        "forgot": "שכחת סיסמה?",
+        "errorLoging": "אחד הנתונים הוקש שגוי"
     },
     "signUpPage": {
         "title": "הרשם",
@@ -30,19 +30,18 @@
         "invalidEmail": "פורמט דואר אלקטרוני לא חוקי",
         "invalidphoneNumber": "מספר טלפון לא חוקי",
         "invalidPassword": "הסיסמה צריכה להיות באורך של לפחות 8 תווים",
-        "errorMailExists":"חשבון מייל זה כבר קיים במערכת אנא הזן כתובת מייל חדשה",
+        "errorMailExists": "חשבון מייל זה כבר קיים במערכת אנא הזן כתובת מייל חדשה",
         "massage": "נרשמת בהצלחה!\n תודה"
-
     },
     "resetPasswordPage": {
         "title": "איפוס סיסמה",
         "putEmail": "כדי לאפס את הסיסמה, בבקשה הזן את כתובת הדוא''ל איתו נרשמת.",
         "invalidEmail": "פורמט דואר אלקטרוני לא חוקי",
         "resetButton": "שלח מייל",
-        "secMassage":"קישור לאפס סיסמה נשלח לאימייל שלך"
+        "secMassage": "קישור לאפס סיסמה נשלח לאימייל שלך"
     },
     "resetPasswordCarePage": {
-        "title":  "הגדר סיסמה חדשה",
+        "title": "הגדר סיסמה חדשה",
         "password1": "הזן את הסיסמה החדשה",
         "password2": "אמת את הסיסמה",
         "invalidPassword": "הסיסמה צריכה להיות באורך של לפחות 8 תווים",
@@ -99,18 +98,17 @@
         "linkProduct": "רשימת מוצרים",
         "linkOrderForm": "  טופס הזמנות",
         "linkShoppingCart": "סל קניות",
-        "linkStayTuned":"הישארו מעודכנים",
-        "linkDistributionRecord":"רשימת תפוצה"
+        "linkStayTuned": "הישארו מעודכנים",
+        "linkDistributionRecord": "רשימת תפוצה"
     },
-
-    "productListPage":{
+    "productListPage": {
         "title": "  רשימת מוצרים",
         "moreDetails": "פרטים נוספים",
-        "cart":"הוספה לסל",
-        "technicalIssue":"מצטערים, תקלה טכנית, נסו לרענן את הדף או להכנס שוב מחדש",
+        "cart": "הוספה לסל",
+        "technicalIssue": "מצטערים, תקלה טכנית, נסו לרענן את הדף או להכנס שוב מחדש",
         "noProducts": "אין מוצרים!",
-        "minPrice":"מחיר מינינלי",
-        "maxPrice":"מחיר מקסימלי "
+        "minPrice": "מחיר מינינלי",
+        "maxPrice": "מחיר מקסימלי "
     },
     "recommendedProducts": {
         "title": "מוצרים מומלצים"
@@ -122,49 +120,54 @@
         "language": "HE",
         "question": "questionHe",
         "answer": "answerHe",
-        "serchTitle":"התחל להקליד את השאלה שלך..."
+        "serchTitle": "התחל להקליד את השאלה שלך..."
     },
-
-    "orderFormPage":{
-    "title":"פרטי ההזמנה שלך",
-    "nameTitle":"שם המוצר: ",
-    "nameProduct":"nameHe",
-    "descriptionTitle":" תאור מוצר: " ,
-    "descriptionProduct":"descriptionHe",
-    "wording":" טקסט: " ,
-    "comments":"הערות: ",
-    "price":"מחיר: " ,
-    "addLogo":" הוסף לוגו",
-    "selectLogo":"בחר קובץ לוגו :",
-    "fileLogo":"קובץ לוגו:",
-    "TotalPayment":"סה''כ לתשלום: ",
-    "buttonSubmitOrder":"סיים הזמנה"
+    "orderFormPage": {
+        "pageTitle":"טופס הזמנה",
+        "totalPayment":"סכום כולל",
+        "placeOrder":"לביצוע הזמנה",
+        "customerInfo": "פרטי משתמש",
+        "name": "שם",
+        "email": "מייל",
+        "phoneNumber": "מספר טלפון",
+        "title": "פרטי ההזמנה שלך",
+        "nameTitle": "שם המוצר: ",
+        "nameProduct": "nameHe",
+        "descriptionTitle": " תאור מוצר: ",
+        "descriptionProduct": "descriptionHe",
+        "wording": " טקסט: ",
+        "comments": "הערות: ",
+        "price": "מחיר: ",
+        "addLogo": " הוסף לוגו",
+        "selectLogo": "בחר קובץ לוגו :",
+        "fileLogo": "קובץ לוגו:",
+        "TotalPayment": "סה''כ לתשלום: ",
+        "buttonSubmitOrder": "סיים הזמנה"
     },
-    "productPage":{
-        "review":"חוות דעת"
-
+    "productPage": {
+        "review": "חוות דעת"
     },
-    "profilePage":{
-        "title":"פרופיל",
-        "editButton":"ערוך",
-        "saveButton":"שמור",
-        "logout":"התנתק",
+    "profilePage": {
+        "title": "פרופיל",
+        "editButton": "ערוך",
+        "saveButton": "שמור",
+        "logout": "התנתק",
         "userName": "שם משתמש",
         "email": "מייל",
         "password": "סיסמה",
         "phoneNumber": "מספר טלפון",
         "typeName": "  מעצב אירועים?"
     },
-    "accountPage":{
-         "errCon":"אינך מחובר",
-        "signIn":"התחבר"
+    "accountPage": {
+        "errCon": "אינך מחובר",
+        "signIn": "התחבר"
     },
-    "OrderHistoryPage":{
-     "not connect1":"מצטערים, אינך מחובר",
-     "not connect2":"התחבר ותוכל לראות את היסטוריית ההזמנות שלך",
-     "ordersFor":"הזמנות ל",
-     "createdAt":" תאריך הזמנה",
-     "status":"סטטוס",
-     "totalAmount":"סך לתשלום"
+    "OrderHistoryPage": {
+        "not connect1": "מצטערים, אינך מחובר",
+        "not connect2": "התחבר ותוכל לראות את היסטוריית ההזמנות שלך",
+        "ordersFor": "הזמנות ל",
+        "createdAt": " תאריך הזמנה",
+        "status": "סטטוס",
+        "totalAmount": "סך לתשלום"
     }
 }
